# embedded-drivers

./: CMakeLists.txt  README.md
interface/: i2c.h.in
interface/linux/: i2c.c  i2c.h
mpu6050/: CMakeLists.txt  README.md  config.h  mpu6050.c  mpu6050.h  registers.h
